@@ -16,24 +16,36 @@ package org.apache.solr.handler.component;
  * limitations under the License.
  */
 
+import java.io.IOException;
 import java.net.MalformedURLException;
+import java.util.Collections;
+import java.util.List;
 import java.util.Random;
-import java.util.concurrent.*;
+import java.util.concurrent.ArrayBlockingQueue;
+import java.util.concurrent.BlockingQueue;
+import java.util.concurrent.CompletionService;
+import java.util.concurrent.ExecutorCompletionService;
+import java.util.concurrent.SynchronousQueue;
+import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.TimeUnit;
 
 import org.apache.http.client.HttpClient;
+import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.impl.HttpClientUtil;
 import org.apache.solr.client.solrj.impl.LBHttpSolrServer;
+import org.apache.solr.client.solrj.request.QueryRequest;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.NamedList;
+import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.core.PluginInfo;
 import org.apache.solr.util.DefaultSolrThreadFactory;
-import org.apache.solr.util.plugin.PluginInfoInitialized;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class HttpShardHandlerFactory extends ShardHandlerFactory implements PluginInfoInitialized {
+
+public class HttpShardHandlerFactory extends ShardHandlerFactory implements org.apache.solr.util.plugin.PluginInfoInitialized {
   protected static Logger log = LoggerFactory.getLogger(HttpShardHandlerFactory.class);
 
   // We want an executor that doesn't take up any resources if
@@ -42,7 +54,7 @@ public class HttpShardHandlerFactory extends ShardHandlerFactory implements Plug
   //
   // Consider CallerRuns policy and a lower max threads to throttle
   // requests at some point (or should we simply return failure?)
-  ThreadPoolExecutor commExecutor = new ThreadPoolExecutor(
+  private ThreadPoolExecutor commExecutor = new ThreadPoolExecutor(
       0,
       Integer.MAX_VALUE,
       5, TimeUnit.SECONDS, // terminate idle threads after 5 sec
@@ -51,7 +63,7 @@ public class HttpShardHandlerFactory extends ShardHandlerFactory implements Plug
   );
 
   private HttpClient defaultClient;
-  LBHttpSolrServer loadbalancer;
+  private LBHttpSolrServer loadbalancer;
   //default values:
   int soTimeout = 0; 
   int connectionTimeout = 0; 
@@ -62,9 +74,9 @@ public class HttpShardHandlerFactory extends ShardHandlerFactory implements Plug
   int queueSize = -1;
   boolean accessPolicy = false;
 
-  public String scheme = "http://"; //current default values
+  private String scheme = "http://"; //current default values
 
-  final Random r = new Random();
+  private final Random r = new Random();
 
   // URL scheme to be used in distributed search.
   static final String INIT_URL_SCHEME = "urlScheme";
@@ -176,5 +188,49 @@ public class HttpShardHandlerFactory extends ShardHandlerFactory implements Plug
       SolrException.log(log, e);
     }
 
+  }
+
+  /**
+   * Makes a request to one or more of the given urls, using the configured load balancer.
+   *
+   * @param req The solr search request that should be sent through the load balancer
+   * @param urls The list of solr server urls to load balance across
+   * @return The response from the request
+   */
+  public LBHttpSolrServer.Rsp makeLoadBalancedRequest(final QueryRequest req, List<String> urls)
+    throws SolrServerException, IOException {
+    return loadbalancer.request(new LBHttpSolrServer.Req(req, urls));
+  }
+
+  /**
+   * Creates a randomized list of urls for the given shard.
+   *
+   * @param shard the urls for the shard (minus "http://"), separated by '|'
+   * @return A list of valid urls (including protocol) that are replicas for the shard
+   */
+  public List<String> makeURLList(String shard) {
+    List<String> urls = StrUtils.splitSmart(shard, "|", true);
+
+    // convert shard to URL
+    for (int i=0; i<urls.size(); i++) {
+      urls.set(i, scheme + urls.get(i));
+    }
+
+    //
+    // Shuffle the list instead of use round-robin by default.
+    // This prevents accidental synchronization where multiple shards could get in sync
+    // and query the same replica at the same time.
+    //
+    if (urls.size() > 1)
+      Collections.shuffle(urls, r);
+
+    return urls;
+  }
+
+  /**
+   * Creates a new completion service for use by a single set of distributed requests.
+   */
+  public CompletionService newCompletionService() {
+    return new ExecutorCompletionService<ShardResponse>(commExecutor);
   }
 }
